--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,56 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Logs
+logs
+*.log
+logs/**/*.log
 
-# testing
-/coverage
+# Dependency directories
+node_modules/
+jspm_packages/
 
-# production
-/build
+# Optional npm cache directory
+.npm
 
-# misc
-.DS_Store
-.env.local
+# Optional eslint cache
+.eslintcache
+
+# Environment variables
+.env
+*.env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# MacOS
+.DS_Store
+
+# IDEs and Editors
+.idea/
+.vscode/
+*.sublime-workspace
+
+# OS files
+Thumbs.db
+.DS_Store
+
+# Build directories
+/dist/
+/build/
+/out/
+
+# Miscellaneous
+*.bak
+*.tmp
+*.swp
+*.swo
+
+# Temporary files
+*.tmp
+*.temp
+*.swp
+*~
